rules.v4
*filter
:INPUT ACCEPT [1578:377612]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [1463:2234790]
-A INPUT -s 192.133.77.0/24 -p tcp -m tcp --dport 443 --tcp-flags FIN,SYN,RST,ACK SYN -m connlimit --connlimit-above 1 --connlimit-mask 32 --connlimit-saddr -j DROP
-A INPUT -s 199.16.157.0/24 -p tcp -m tcp --dport 443 --tcp-flags FIN,SYN,RST,ACK SYN -m connlimit --connlimit-above 1 --connlimit-mask 32 --connlimit-saddr -j DROP
-A INPUT -s 135.181.0.0/16 -j DROP
-A INPUT -s 136.243.0.0/16 -j DROP
-A INPUT -s 139.99.0.0/16 -j DROP
-A INPUT -s 15.235.0.0/16 -j DROP
-A INPUT -s 192.99.0.0/16 -j DROP
-A INPUT -s 195.201.0.0/16 -j DROP
-A INPUT -s 34.127.0.0/16 -j DROP
-A INPUT -s 34.140.0.0/16 -j DROP
-A INPUT -s 34.145.0.0/16 -j DROP
-A INPUT -s 34.168.0.0/16 -j DROP
-A INPUT -s 34.220.0.0/16 -j DROP
-A INPUT -s 34.221.0.0/16 -j DROP
-A INPUT -s 34.82.0.0/16 -j DROP
-A INPUT -s 34.83.0.0/16 -j DROP
-A INPUT -s 35.162.0.0/16 -j DROP
-A INPUT -s 35.227.0.0/16 -j DROP
-A INPUT -s 35.230.0.0/16 -j DROP
-A INPUT -s 35.88.0.0/16 -j DROP
-A INPUT -s 35.92.0.0/16 -j DROP
-A INPUT -s 43.130.0.0/16 -j DROP
-A INPUT -s 47.128.0.0/16 -j DROP
-A INPUT -s 51.89.0.0/16 -j DROP
-A INPUT -s 52.24.0.0/16 -j DROP
-A INPUT -s 54.186.0.0/16 -j DROP
-A INPUT -s 54.187.0.0/16 -j DROP
-A INPUT -s 54.191.0.0/16 -j DROP
-A INPUT -s 54.201.0.0/16 -j DROP
-A INPUT -s 54.244.0.0/16 -j DROP
-A INPUT -s 54.245.0.0/16 -j DROP
-A INPUT -s 57.128.0.0/16 -j DROP
-A INPUT -s 57.129.0.0/16 -j DROP
-A INPUT -s 65.108.0.0/16 -j DROP
-A INPUT -s 65.21.0.0/16 -j DROP
-A INPUT -s 88.99.0.0/16 -j DROP
-A INPUT -s 94.130.0.0/16 -j DROP
-A INPUT -s 35.91.0.0/16 -j DROP
-A INPUT -s 34.222.0.0/16 -j DROP
-A INPUT -s 34.76.0.0/16 -j DROP
-A INPUT -s 52.25.0.0/16 -j DROP
-A INPUT -s 34.217.0.0/16 -j DROP
-A INPUT -s 34.38.0.0/16 -j DROP
-A INPUT -s 35.86.0.0/16 -j DROP
-A INPUT -s 18.236.0.0/16 -j DROP
-A INPUT -s 54.189.0.0/16 -j DROP
-A INPUT -s 35.189.0.0/16 -j DROP
-A INPUT -s 144.76.0.0/16 -j DROP
-A INPUT -s 54.74.0.0/16 -j DROP
-A INPUT -s 34.245.0.0/16 -j DROP
-A INPUT -s 118.193.0.0/16 -j DROP
-A INPUT -s 152.32.0.0/16 -j DROP
-A INPUT -s 188.165.0.0/16 -j DROP
-A INPUT -s 37.187.0.0/16 -j DROP
-A INPUT -s 52.32.0.0/16 -j DROP
-A INPUT -s 54.71.0.0/16 -j DROP
-A INPUT -s 18.185.0.0/16 -j DROP
-A INPUT -s 34.34.0.0/16 -j DROP
-A INPUT -s 17.142.0.0/16 -j DROP
-A INPUT -s 17.241.0.0/16 -j DROP
-A INPUT -s 35.195.0.0/16 -j DROP
-A INPUT -s 138.201.0.0/16 -j DROP
-A INPUT -s 114.119.0.0/16 -j DROP
-A INPUT -s 34.78.0.0/16 -j DROP
-A INPUT -s 54.180.0.0/16 -j DROP
-A INPUT -s 104.155.0.0/16 -j DROP
-A INPUT -s 34.79.0.0/16 -j DROP
-A INPUT -s 165.154.0.0/16 -j DROP
-A INPUT -s 101.36.0.0/16 -j DROP
-A INPUT -s 13.54.0.0/16 -j DROP
-A INPUT -s 94.102.0.0/16 -j DROP
-A INPUT -s 15.237.0.0/16 -j DROP
-A INPUT -s 54.151.0.0/16 -j DROP
-A INPUT -s 35.187.0.0/16 -j DROP
-A INPUT -s 23.20.0.0/16 -j DROP
-A INPUT -s 34.77.0.0/16 -j DROP
-A INPUT -s 145.239.0.0/16 -j DROP
-A INPUT -s 158.220.0.0/16 -j DROP
-A INPUT -s 51.83.0.0/16 -j DROP
-A INPUT -s 54.39.0.0/16 -j DROP
-A INPUT -s 91.134.0.0/16 -j DROP
-A INPUT -s 47.79.0.0/16 -j DROP
-A INPUT -s 47.242.0.0/16 -j DROP
-A INPUT -s 47.243.0.0/16 -j DROP
-A INPUT -s 8.210.0.0/16 -j DROP
-A INPUT -s 52.164.0.0/16 -j DROP
-A INPUT -s 40.69.0.0/16 -j DROP
-A INPUT -s 52.169.0.0/16 -j DROP
-A INPUT -s 52.178.0.0/16 -j DROP
-A INPUT -s 100.21.24.0/24 -j DROP
-A INPUT -s 103.105.35.0/24 -j DROP
-A INPUT -s 103.166.9.0/24 -j DROP
-A INPUT -s 104.198.104.0/24 -j DROP
-A INPUT -s 104.198.108.0/24 -j DROP
-A INPUT -s 104.200.17.0/24 -j DROP
-A INPUT -s 104.28.215.0/24 -j DROP
-A INPUT -s 104.28.247.0/24 -j DROP
-A INPUT -s 104.28.39.0/24 -j DROP
-A INPUT -s 107.6.187.0/24 -j DROP
-A INPUT -s 109.36.150.0/24 -j DROP
-A INPUT -s 111.7.100.0/24 -j DROP
-A INPUT -s 114.83.100.0/24 -j DROP
-A INPUT -s 116.10.191.0/24 -j DROP
-A INPUT -s 116.202.35.0/24 -j DROP
-A INPUT -s 123.58.212.0/24 -j DROP
-A INPUT -s 123.58.213.0/24 -j DROP
-A INPUT -s 13.231.111.0/24 -j DROP
-A INPUT -s 13.67.10.0/24 -j DROP
-A INPUT -s 13.69.66.0/24 -j DROP
-A INPUT -s 13.71.172.0/24 -j DROP
-A INPUT -s 135.125.219.0/24 -j DROP
-A INPUT -s 135.125.244.0/24 -j DROP
-A INPUT -s 135.125.246.0/24 -j DROP
-A INPUT -s 138.68.5.0/24 -j DROP
-A INPUT -s 139.59.246.0/24 -j DROP
-A INPUT -s 140.213.73.0/24 -j DROP
-A INPUT -s 141.0.8.0/24 -j DROP
-A INPUT -s 141.0.9.0/24 -j DROP
-A INPUT -s 141.94.194.0/24 -j DROP
-A INPUT -s 141.95.150.0/24 -j DROP
-A INPUT -s 141.95.175.0/24 -j DROP
-A INPUT -s 141.98.6.0/24 -j DROP
-A INPUT -s 141.98.83.0/24 -j DROP
-A INPUT -s 143.198.159.0/24 -j DROP
-A INPUT -s 144.91.106.0/24 -j DROP
-A INPUT -s 146.70.174.0/24 -j DROP
-A INPUT -s 148.251.11.0/24 -j DROP
-A INPUT -s 148.251.168.0/24 -j DROP
-A INPUT -s 149.202.65.0/24 -j DROP
-A INPUT -s 149.202.86.0/24 -j DROP
-A INPUT -s 152.228.220.0/24 -j DROP
-A INPUT -s 154.38.173.0/24 -j DROP
-A INPUT -s 156.212.199.0/24 -j DROP
-A INPUT -s 157.55.39.0/24 -j DROP
-A INPUT -s 159.146.40.0/24 -j DROP
-A INPUT -s 162.248.160.0/24 -j DROP
-A INPUT -s 162.55.85.0/24 -j DROP
-A INPUT -s 163.5.64.0/24 -j DROP
-A INPUT -s 167.172.102.0/24 -j DROP
-A INPUT -s 168.119.33.0/24 -j DROP
-A INPUT -s 168.119.76.0/24 -j DROP
-A INPUT -s 168.138.188.0/24 -j DROP
-A INPUT -s 168.235.203.0/24 -j DROP
-A INPUT -s 168.235.206.0/24 -j DROP
-A INPUT -s 172.187.208.0/24 -j DROP
-A INPUT -s 173.239.53.0/24 -j DROP
-A INPUT -s 176.9.117.0/24 -j DROP
-A INPUT -s 178.151.245.0/24 -j DROP
-A INPUT -s 178.175.128.0/24 -j DROP
-A INPUT -s 178.25.242.0/24 -j DROP
-A INPUT -s 178.25.244.0/24 -j DROP
-A INPUT -s 179.60.147.0/24 -j DROP
-A INPUT -s 179.60.150.0/24 -j DROP
-A INPUT -s 18.183.251.0/24 -j DROP
-A INPUT -s 183.182.117.0/24 -j DROP
-A INPUT -s 184.169.187.0/24 -j DROP
-A INPUT -s 185.156.46.0/24 -j DROP
-A INPUT -s 185.191.171.0/24 -j DROP
-A INPUT -s 185.215.165.0/24 -j DROP
-A INPUT -s 185.253.97.0/24 -j DROP
-A INPUT -s 188.166.188.0/24 -j DROP
-A INPUT -s 191.233.204.0/24 -j DROP
-A INPUT -s 192.95.29.0/24 -j DROP
-A INPUT -s 192.95.30.0/24 -j DROP
-A INPUT -s 193.29.13.0/24 -j DROP
-A INPUT -s 193.46.255.0/24 -j DROP
-A INPUT -s 193.70.81.0/24 -j DROP
-A INPUT -s 194.247.173.0/24 -j DROP
-A INPUT -s 195.191.219.0/24 -j DROP
-A INPUT -s 195.210.4.0/24 -j DROP
-A INPUT -s 196.240.54.0/24 -j DROP
-A INPUT -s 198.20.105.0/24 -j DROP
-A INPUT -s 198.20.110.0/24 -j DROP
-A INPUT -s 20.15.240.0/24 -j DROP
-A INPUT -s 20.15.241.0/24 -j DROP
-A INPUT -s 20.15.242.0/24 -j DROP
-A INPUT -s 20.225.102.0/24 -j DROP
-A INPUT -s 20.36.108.0/24 -j DROP
-A INPUT -s 20.43.120.0/24 -j DROP
-A INPUT -s 20.74.197.0/24 -j DROP
-A INPUT -s 20.79.107.0/24 -j DROP
-A INPUT -s 203.186.248.0/24 -j DROP
-A INPUT -s 206.189.42.0/24 -j DROP
-A INPUT -s 207.46.13.0/24 -j DROP
-A INPUT -s 213.180.203.0/24 -j DROP
-A INPUT -s 216.244.66.0/24 -j DROP
-A INPUT -s 217.182.134.0/24 -j DROP
-A INPUT -s 217.182.175.0/24 -j DROP
-A INPUT -s 23.22.35.0/24 -j DROP
-A INPUT -s 27.125.248.0/24 -j DROP
-A INPUT -s 3.224.220.0/24 -j DROP
-A INPUT -s 3.239.2.0/24 -j DROP
-A INPUT -s 3.27.128.0/24 -j DROP
-A INPUT -s 31.220.87.0/24 -j DROP
-A INPUT -s 34.105.54.0/24 -j DROP
-A INPUT -s 34.206.217.0/24 -j DROP
-A INPUT -s 34.22.140.0/24 -j DROP
-A INPUT -s 34.22.175.0/24 -j DROP
-A INPUT -s 34.77.128.0/24 -j DROP
-A INPUT -s 35.185.205.0/24 -j DROP
-A INPUT -s 35.185.225.0/24 -j DROP
-A INPUT -s 35.197.40.0/24 -j DROP
-A INPUT -s 35.199.166.0/24 -j DROP
-A INPUT -s 35.203.167.0/24 -j DROP
-A INPUT -s 35.203.169.0/24 -j DROP
-A INPUT -s 35.233.163.0/24 -j DROP
-A INPUT -s 35.233.247.0/24 -j DROP
-A INPUT -s 35.240.76.0/24 -j DROP
-A INPUT -s 35.241.251.0/24 -j DROP
-A INPUT -s 35.247.22.0/24 -j DROP
-A INPUT -s 35.247.81.0/24 -j DROP
-A INPUT -s 35.85.248.0/24 -j DROP
-A INPUT -s 35.87.136.0/24 -j DROP
-A INPUT -s 35.89.190.0/24 -j DROP
-A INPUT -s 35.93.85.0/24 -j DROP
-A INPUT -s 36.71.143.0/24 -j DROP
-A INPUT -s 36.71.81.0/24 -j DROP
-A INPUT -s 36.99.136.0/24 -j DROP
-A INPUT -s 37.59.21.0/24 -j DROP
-A INPUT -s 38.242.147.0/24 -j DROP
-A INPUT -s 40.77.167.0/24 -j DROP
-A INPUT -s 40.79.131.0/24 -j DROP
-A INPUT -s 40.79.186.0/24 -j DROP
-A INPUT -s 40.83.2.0/24 -j DROP
-A INPUT -s 43.207.137.0/24 -j DROP
-A INPUT -s 43.207.58.0/24 -j DROP
-A INPUT -s 44.199.53.0/24 -j DROP
-A INPUT -s 44.230.252.0/24 -j DROP
-A INPUT -s 44.239.59.0/24 -j DROP
-A INPUT -s 44.242.162.0/24 -j DROP
-A INPUT -s 45.141.215.0/24 -j DROP
-A INPUT -s 45.148.30.0/24 -j DROP
-A INPUT -s 45.81.39.0/24 -j DROP
-A INPUT -s 46.101.18.0/24 -j DROP
-A INPUT -s 47.76.35.0/24 -j DROP
-A INPUT -s 5.104.81.0/24 -j DROP
-A INPUT -s 5.255.231.0/24 -j DROP
-A INPUT -s 5.255.253.0/24 -j DROP
-A INPUT -s 5.45.207.0/24 -j DROP
-A INPUT -s 5.78.82.0/24 -j DROP
-A INPUT -s 51.105.67.0/24 -j DROP
-A INPUT -s 51.158.165.0/24 -j DROP
-A INPUT -s 51.174.65.0/24 -j DROP
-A INPUT -s 51.210.9.0/24 -j DROP
-A INPUT -s 51.222.253.0/24 -j DROP
-A INPUT -s 51.38.181.0/24 -j DROP
-A INPUT -s 51.68.91.0/24 -j DROP
-A INPUT -s 51.68.95.0/24 -j DROP
-A INPUT -s 51.79.77.0/24 -j DROP
-A INPUT -s 52.14.140.0/24 -j DROP
-A INPUT -s 52.14.73.0/24 -j DROP
-A INPUT -s 52.167.144.0/24 -j DROP
-A INPUT -s 52.221.191.0/24 -j DROP
-A INPUT -s 52.230.152.0/24 -j DROP
-A INPUT -s 52.34.76.0/24 -j DROP
-A INPUT -s 52.43.50.0/24 -j DROP
-A INPUT -s 52.55.111.0/24 -j DROP
-A INPUT -s 52.70.240.0/24 -j DROP
-A INPUT -s 54.149.192.0/24 -j DROP
-A INPUT -s 54.156.63.0/24 -j DROP
-A INPUT -s 54.161.41.0/24 -j DROP
-A INPUT -s 54.177.153.0/24 -j DROP
-A INPUT -s 54.184.91.0/24 -j DROP
-A INPUT -s 54.202.220.0/24 -j DROP
-A INPUT -s 54.213.54.0/24 -j DROP
-A INPUT -s 54.218.64.0/24 -j DROP
-A INPUT -s 54.238.244.0/24 -j DROP
-A INPUT -s 54.36.114.0/24 -j DROP
-A INPUT -s 54.38.85.0/24 -j DROP
-A INPUT -s 62.197.145.0/24 -j DROP
-A INPUT -s 64.124.8.0/24 -j DROP
-A INPUT -s 65.109.100.0/24 -j DROP
-A INPUT -s 66.102.9.0/24 -j DROP
-A INPUT -s 66.115.154.0/24 -j DROP
-A INPUT -s 69.50.138.0/24 -j DROP
-A INPUT -s 74.249.173.0/24 -j DROP
-A INPUT -s 74.80.208.0/24 -j DROP
-A INPUT -s 77.9.39.0/24 -j DROP
-A INPUT -s 79.110.62.0/24 -j DROP
-A INPUT -s 79.124.49.0/24 -j DROP
-A INPUT -s 79.124.8.0/24 -j DROP
-A INPUT -s 79.213.174.0/24 -j DROP
-A INPUT -s 81.209.177.0/24 -j DROP
-A INPUT -s 81.99.162.0/24 -j DROP
-A INPUT -s 82.145.211.0/24 -j DROP
-A INPUT -s 82.165.64.0/24 -j DROP
-A INPUT -s 84.46.255.0/24 -j DROP
-A INPUT -s 85.208.96.0/24 -j DROP
-A INPUT -s 87.250.224.0/24 -j DROP
-A INPUT -s 88.214.26.0/24 -j DROP
-A INPUT -s 89.187.168.0/24 -j DROP
-A INPUT -s 89.38.99.0/24 -j DROP
-A INPUT -s 89.39.107.0/24 -j DROP
-A INPUT -s 91.137.17.0/24 -j DROP
-A INPUT -s 91.92.241.0/24 -j DROP
-A INPUT -s 91.92.246.0/24 -j DROP
-A INPUT -s 91.92.250.0/24 -j DROP
-A INPUT -s 91.92.252.0/24 -j DROP
-A INPUT -s 94.128.161.0/24 -j DROP
-A INPUT -s 94.128.163.0/24 -j DROP
-A INPUT -s 94.156.64.0/24 -j DROP
-A INPUT -s 94.23.203.0/24 -j DROP
-A INPUT -s 94.23.207.0/24 -j DROP
-A INPUT -s 94.23.209.0/24 -j DROP
-A INPUT -s 94.23.7.0/24 -j DROP
-A INPUT -s 95.108.213.0/24 -j DROP
-A INPUT -s 95.111.230.0/24 -j DROP
-A INPUT -s 95.117.97.0/24 -j DROP
-A INPUT -s 95.161.221.0/24 -j DROP
-A INPUT -s 95.161.239.0/24 -j DROP
-A INPUT -s 95.211.185.0/24 -j DROP
-A INPUT -s 95.214.248.0/24 -j DROP
-A INPUT -s 95.217.109.0/24 -j DROP
-A INPUT -s 62.197.147.0/24 -j DROP
-A INPUT -s 89.36.76.0/24 -j DROP
-A INPUT -s 185.153.151.0/24 -j DROP
-A INPUT -s 95.91.109.0/24 -j DROP
-A INPUT -s 107.173.63.0/24 -j DROP
-A INPUT -s 4.210.99.0/24 -j DROP
-A INPUT -s 2.57.121.0/24 -j DROP
-A INPUT -s 38.242.249.0/24 -j DROP
-A INPUT -s 195.123.240.0/24 -j DROP
-A INPUT -s 195.123.241.0/24 -j DROP
-A INPUT -s 74.125.212.0/24 -j DROP
-A INPUT -s 139.177.186.0/24 -j DROP
-A INPUT -s 193.27.14.0/24 -j DROP
-A INPUT -s 84.46.245.0/24 -j DROP
-A INPUT -s 64.227.143.0/24 -j DROP
-A INPUT -s 37.57.218.0/24 -j DROP
-A INPUT -s 66.249.81.0/24 -j DROP
-A INPUT -s 62.204.41.0/24 -j DROP
-A INPUT -s 172.233.57.0/24 -j DROP
-A INPUT -s 79.137.198.0/24 -j DROP
-A INPUT -s 13.69.135.0/24 -j DROP
-A INPUT -s 141.98.11.0/24 -j DROP
-A INPUT -s 5.42.64.0/24 -j DROP
-A INPUT -s 13.79.216.0/24 -j DROP
-A INPUT -s 84.17.35.0/24 -j DROP
-A INPUT -s 154.127.54.0/24 -j DROP
-A INPUT -s 91.246.58.0/24 -j DROP
-A INPUT -s 88.243.143.0/24 -j DROP
-A INPUT -s 138.199.35.0/24 -j DROP
-A INPUT -s 138.199.40.0/24 -j DROP
-A INPUT -s 146.70.186.0/24 -j DROP
-A INPUT -s 167.172.92.0/24 -j DROP
-A INPUT -s 161.97.145.0/24 -j DROP
-A INPUT -s 154.54.249.0/24 -j DROP
-A INPUT -s 217.113.194.0/24 -j DROP
-A INPUT -s 190.2.153.0/24 -j DROP
-A INPUT -s 93.190.138.0/24 -j DROP
-A INPUT -s 185.229.119.0/24 -j DROP
-A INPUT -s 94.154.239.0/24 -j DROP
-A INPUT -s 173.230.132.0/24 -j DROP
-A INPUT -s 4.210.77.0/24 -j DROP
-A INPUT -s 20.166.35.0/24 -j DROP
-A INPUT -s 20.223.192.0/24 -j DROP
-A INPUT -s 194.242.57.0/24 -j DROP
-A INPUT -s 54.36.148.0/24 -j DROP
-A INPUT -s 84.247.135.0/24 -j DROP
-A INPUT -s 69.63.184.0/24 -j DROP
-A INPUT -s 173.252.107.0/24 -j DROP
-A INPUT -s 161.97.165.0/24 -j DROP
-A INPUT -s 178.150.14.0/24 -j DROP
-A INPUT -s 212.47.242.0/24 -j DROP
-A INPUT -s 31.220.94.0/24 -j DROP
-A INPUT -s 146.19.215.0/24 -j DROP
-A INPUT -s 42.200.112.0/24 -j DROP
-A INPUT -s 178.18.241.0/24 -j DROP
-A INPUT -s 102.129.143.0/24 -j DROP
-A INPUT -s 141.94.105.0/24 -j DROP
-A INPUT -s 95.91.111.0/24 -j DROP
-A INPUT -s 198.134.116.0/24 -j DROP
-A INPUT -s 188.42.195.0/24 -j DROP
-A INPUT -s 80.82.70.0/24 -j DROP
-A INPUT -s 104.248.25.0/24 -j DROP
-A INPUT -s 23.251.136.0/24 -j DROP
-A INPUT -s 146.59.117.0/24 -j DROP
-A INPUT -s 138.199.19.0/24 -j DROP
-A INPUT -s 218.188.41.0/24 -j DROP
-A INPUT -s 51.79.26.0/24 -j DROP
-A INPUT -s 34.22.141.0/24 -j DROP
-A INPUT -s 51.77.108.0/24 -j DROP
-A INPUT -s 159.242.234.0/24 -j DROP
-A INPUT -s 164.92.252.0/24 -j DROP
-A INPUT -s 69.10.35.0/24 -j DROP
-A INPUT -s 45.88.90.0/24 -j DROP
-A INPUT -s 51.195.105.0/24 -j DROP
-A INPUT -s 42.103.128.0/24 -j DROP
-A INPUT -s 95.217.195.0/24 -j DROP
-A INPUT -s 2.59.156.0/24 -j DROP
-A INPUT -s 146.148.117.0/24 -j DROP
-A INPUT -s 146.70.36.0/24 -j DROP
-A INPUT -s 80.94.93.0/24 -j DROP
-A INPUT -s 31.187.74.0/24 -j DROP
-A INPUT -s 45.249.247.0/24 -j DROP
-A INPUT -s 91.137.27.0/24 -j DROP
-A INPUT -s 51.77.111.0/24 -j DROP
-A INPUT -s 154.28.229.0/24 -j DROP
-A INPUT -s 104.156.155.0/24 -j DROP
-A INPUT -s 185.197.250.0/24 -j DROP
-A INPUT -s 146.70.117.0/24 -j DROP
-A INPUT -s 40.71.187.0/24 -j DROP
-A INPUT -s 120.23.122.0/24 -j DROP
-A INPUT -s 95.91.104.0/24 -j DROP
-A INPUT -s 93.158.213.0/24 -j DROP
-A INPUT -s 94.156.69.0/24 -j DROP
-A INPUT -s 38.242.198.0/24 -j DROP
-A INPUT -s 146.148.122.0/24 -j DROP
-A INPUT -s 52.142.26.0/24 -j DROP
-A INPUT -s 103.218.243.0/24 -j DROP
-A INPUT -s 51.75.168.0/24 -j DROP
-A INPUT -s 40.77.189.0/24 -j DROP
-A INPUT -s 212.47.240.0/24 -j DROP
-A INPUT -s 103.210.21.0/24 -j DROP
-A INPUT -s 141.98.10.0/24 -j DROP
-A INPUT -s 23.91.97.0/24 -j DROP
-A INPUT -s 35.233.77.0/24 -j DROP
-A INPUT -s 185.82.218.0/24 -j DROP
-A INPUT -s 37.27.58.0/24 -j DROP
-A INPUT -s 35.240.100.0/24 -j DROP
-A INPUT -s 114.10.125.0/24 -j DROP
-A INPUT -s 194.60.87.0/24 -j DROP
-A INPUT -s 34.91.115.0/24 -j DROP
-A INPUT -s 35.174.62.0/24 -j DROP
-A INPUT -s 103.115.185.0/24 -j DROP
-A INPUT -s 52.12.16.0/24 -j DROP
-A INPUT -s 157.90.182.0/24 -j DROP
-A INPUT -s 44.204.94.0/24 -j DROP
-A INPUT -s 36.255.223.0/24 -j DROP
-A INPUT -s 35.240.21.0/24 -j DROP
-A INPUT -s 51.75.93.0/24 -j DROP
-A INPUT -s 51.91.208.0/24 -j DROP
-A INPUT -s 51.91.147.0/24 -j DROP
-A INPUT -s 89.58.38.0/24 -j DROP
-A INPUT -s 216.73.160.0/24 -j DROP
-A INPUT -s 51.91.149.0/24 -j DROP
-A INPUT -s 54.36.117.0/24 -j DROP
-A INPUT -s 51.75.94.0/24 -j DROP
-A INPUT -s 51.75.95.0/24 -j DROP
-A INPUT -s 45.15.18.0/24 -j DROP
-A INPUT -s 162.19.223.0/24 -j DROP
-A INPUT -s 51.91.209.0/24 -j DROP
-A INPUT -s 51.195.233.0/24 -j DROP
-A INPUT -s 51.210.214.0/24 -j DROP
-A INPUT -s 54.202.253.0/24 -j DROP
-A INPUT -s 81.167.26.0/24 -j DROP
-A INPUT -s 52.12.30.0/24 -j DROP
-A INPUT -s 44.214.187.0/24 -j DROP
-A INPUT -s 54.36.232.0/24 -j DROP
-A INPUT -s 5.253.19.0/24 -j DROP
-A INPUT -s 185.216.178.0/24 -j DROP
-A INPUT -s 69.197.140.0/24 -j DROP
-A INPUT -s 95.91.41.0/24 -j DROP
-A INPUT -s 91.92.243.0/24 -j DROP
-A INPUT -s 35.95.148.0/24 -j DROP
-A INPUT -s 38.242.209.0/24 -j DROP
-A INPUT -s 91.92.251.0/24 -j DROP
-A INPUT -s 185.109.168.0/24 -j DROP
-A INPUT -s 104.199.76.0/24 -j DROP
-A INPUT -s 34.219.244.0/24 -j DROP
-A INPUT -s 34.219.197.0/24 -j DROP
-A INPUT -s 54.93.215.0/24 -j DROP
-A INPUT -s 216.218.191.0/24 -j DROP
-A INPUT -s 216.218.141.0/24 -j DROP
-A INPUT -s 64.62.158.0/24 -j DROP
-A INPUT -s 35.90.31.0/24 -j DROP
-A INPUT -s 34.214.134.0/24 -j DROP
-A INPUT -s 216.218.147.0/24 -j DROP
-A INPUT -s 64.62.210.0/24 -j DROP
-A INPUT -s 64.71.166.0/24 -j DROP
-A INPUT -s 35.239.167.0/24 -j DROP
-A INPUT -s 35.163.252.0/24 -j DROP
-A INPUT -s 52.11.23.0/24 -j DROP
-A INPUT -s 54.190.184.0/24 -j DROP
-A INPUT -s 51.83.226.0/24 -j DROP
-A INPUT -s 51.68.147.0/24 -j DROP
-A INPUT -s 51.68.146.0/24 -j DROP
-A INPUT -s 51.79.140.0/24 -j DROP
-A INPUT -s 51.161.117.0/24 -j DROP
-A INPUT -s 51.161.86.0/24 -j DROP
-A INPUT -s 51.161.115.0/24 -j DROP
-A INPUT -s 51.161.84.0/24 -j DROP
-A INPUT -s 167.114.1.0/24 -j DROP
-A INPUT -s 167.114.159.0/24 -j DROP
-A INPUT -s 35.164.52.0/24 -j DROP
-A INPUT -s 128.1.132.0/24 -j DROP
-A INPUT -s 35.233.59.0/24 -j DROP
-A INPUT -s 69.171.249.0/24 -j DROP
-A INPUT -s 69.171.230.0/24 -j DROP
-A INPUT -s 173.252.83.0/24 -j DROP
-A INPUT -s 35.87.244.0/24 -j DROP
-A INPUT -s 54.188.146.0/24 -j DROP
-A INPUT -s 34.219.202.0/24 -j DROP
-A INPUT -s 35.89.149.0/24 -j DROP
-A INPUT -s 52.39.233.0/24 -j DROP
-A INPUT -s 52.12.99.0/24 -j DROP
-A INPUT -s 35.95.64.0/24 -j DROP
-A INPUT -s 54.202.30.0/24 -j DROP
-A INPUT -s 92.118.39.0/24 -j DROP
-A INPUT -s 36.182.48.0/24 -j DROP
-A INPUT -s 35.90.32.0/24 -j DROP
-A INPUT -s 35.93.178.0/24 -j DROP
-A INPUT -s 35.205.194.0/24 -j DROP
-A INPUT -s 52.88.176.0/24 -j DROP
-A INPUT -s 52.39.118.0/24 -j DROP
-A INPUT -s 35.87.137.0/24 -j DROP
-A INPUT -s 34.213.224.0/24 -j DROP
-A INPUT -s 35.205.119.0/24 -j DROP
-A INPUT -s 81.181.55.0/24 -j DROP
-A INPUT -s 185.190.24.0/24 -j DROP
-A INPUT -s 147.78.47.0/24 -j DROP
-A INPUT -s 45.131.216.0/24 -j DROP
-A INPUT -s 194.135.90.0/24 -j DROP
-A INPUT -s 51.158.124.0/24 -j DROP
-A INPUT -s 20.15.133.0/24 -j DROP
-A INPUT -s 40.77.139.0/24 -j DROP
-A INPUT -s 40.77.188.0/24 -j DROP
-A INPUT -s 40.77.190.0/24 -j DROP
-A INPUT -s 40.77.191.0/24 -j DROP
-A INPUT -s 40.77.202.0/24 -j DROP
-A INPUT -s 108.181.10.0/24 -j DROP
-A INPUT -s 35.240.0.0/24 -j DROP
-A INPUT -s 91.92.242.0/24 -j DROP
-A INPUT -s 3.122.100.0/24 -j DROP
-A INPUT -s 35.240.114.0/24 -j DROP
-A INPUT -s 37.27.126.0/24 -j DROP
-A INPUT -s 34.86.177.0/24 -j DROP
-A INPUT -s 37.114.33.0/24 -j DROP
-A INPUT -s 80.76.49.0/24 -j DROP
-A INPUT -s 45.88.91.0/24 -j DROP
-A INPUT -s 18.192.22.0/24 -j DROP
-A INPUT -s 36.68.216.0/24 -j DROP
-A INPUT -s 18.192.22.0/24 -j DROP
-A INPUT -s 95.154.200.0/24 -j DROP
-A INPUT -s 35.208.58.0/24 -j DROP
-A INPUT -s 35.175.231.0/24 -j DROP
-A INPUT -s 94.156.66.0/24 -j DROP
-A INPUT -s 92.223.85.0/24 -j DROP
-A INPUT -s 43.231.234.0/24 -j DROP
-A INPUT -s 35.205.123.0/24 -j DROP
-A INPUT -s 35.233.65.0/24 -j DROP
-A INPUT -s 4.227.18.0/24 -j DROP
-A INPUT -s 35.205.156.0/24 -j DROP
-A INPUT -s 35.240.90.0/24 -j DROP
-A INPUT -s 3.0.19.0/24 -j DROP
-A INPUT -s 185.152.66.0/24 -j DROP
-A INPUT -s 109.169.10.0/24 -j DROP
-A INPUT -s 193.176.211.0/24 -j DROP
-A INPUT -s 50.87.144.0/24 -j DROP
-A INPUT -s 52.187.5.0/24 -j DROP
-A INPUT -s 13.79.89.0/24 -j DROP
-A INPUT -s 95.142.120.0/24 -j DROP
-A INPUT -s 185.170.167.0/24 -j DROP
-A INPUT -s 108.165.243.0/24 -j DROP
-A INPUT -s 178.79.139.0/24 -j DROP
-A INPUT -s 81.181.57.0/24 -j DROP
-A INPUT -s 193.37.32.0/24 -j DROP
-A INPUT -s 57.141.0.0/24 -j DROP
-A INPUT -s 109.74.204.0/24 -j DROP
-A INPUT -s 103.98.214.0/24 -j DROP
-A INPUT -s 175.22.83.0/24 -j DROP
-A INPUT -s 52.59.248.0/24 -j DROP
-A INPUT -s 3.75.202.0/24 -j DROP
-A INPUT -s 183.182.114.0/24 -j DROP
-A INPUT -s 3.70.172.0/24 -j DROP
-A INPUT -s 52.59.227.0/24 -j DROP
-A INPUT -s 3.72.51.0/24 -j DROP
-A INPUT -s 194.55.186.0/24 -j DROP
-A INPUT -s 54.90.236.0/24 -j DROP
-A INPUT -s 39.62.2.0/24 -j DROP
-A INPUT -s 146.190.46.0/24 -j DROP
-A INPUT -s 13.229.208.0/24 -j DROP
-A INPUT -s 78.142.18.0/24 -j DROP
-A INPUT -s 15.181.97.0/24 -j DROP
-A INPUT -s 54.185.149.0/24 -j DROP
-A INPUT -s 35.93.203.0/24 -j DROP
-A INPUT -s 35.94.226.0/24 -j DROP
-A INPUT -s 91.92.244.0/24 -j DROP
-A INPUT -s 35.90.25.0/24 -j DROP
-A INPUT -s 94.156.68.0/24 -j DROP
-A INPUT -s 35.164.239.0/24 -j DROP
-A INPUT -s 54.213.245.0/24 -j DROP
-A INPUT -s 35.87.129.0/24 -j DROP
-A INPUT -s 54.213.30.0/24 -j DROP
-A INPUT -s 17.246.19.0/24 -j DROP
-A INPUT -s 17.246.23.0/24 -j DROP
-A INPUT -s 17.22.237.0/24 -j DROP
-A INPUT -s 17.22.245.0/24 -j DROP
-A INPUT -s 54.203.22.0/24 -j DROP
-A INPUT -s 35.87.180.0/24 -j DROP
-A INPUT -s 35.87.152.0/24 -j DROP
-A INPUT -s 104.131.0.0/24 -j DROP
-A INPUT -s 34.215.183.0/24 -j DROP
-A INPUT -s 52.12.117.0/24 -j DROP
-A INPUT -s 52.36.226.0/24 -j DROP
-A INPUT -s 35.90.89.0/24 -j DROP
-A INPUT -s 34.215.84.0/24 -j DROP
-A INPUT -s 35.89.122.0/24 -j DROP
-A INPUT -s 35.87.249.0/24 -j DROP
-A INPUT -s 35.89.192.0/24 -j DROP
-A INPUT -s 54.202.141.0/24 -j DROP
-A INPUT -s 52.26.31.0/24 -j DROP
-A INPUT -s 54.185.172.0/24 -j DROP
-A INPUT -s 37.19.201.0/24 -j DROP
-A INPUT -s 52.237.251.0/24 -j DROP
-A INPUT -s 36.68.222.0/24 -j DROP
-A INPUT -s 35.93.200.0/24 -j DROP
-A INPUT -s 54.203.178.0/24 -j DROP
-A INPUT -s 34.223.7.0/24 -j DROP
-A INPUT -s 35.94.200.0/24 -j DROP
-A INPUT -s 52.39.27.0/24 -j DROP
-A INPUT -s 34.214.104.0/24 -j DROP
-A INPUT -s 52.13.61.0/24 -j DROP
-A INPUT -s 159.65.11.0/24 -j DROP
-A INPUT -s 103.102.228.0/24 -j DROP
-A INPUT -s 149.22.87.0/24 -j DROP
-A INPUT -s 103.159.194.0/24 -j DROP
-A INPUT -s 54.184.42.0/24 -j DROP
-A INPUT -s 35.95.133.0/24 -j DROP
-A INPUT -s 34.214.121.0/24 -j DROP
-A INPUT -s 5.181.86.0/24 -j DROP
-A INPUT -s 162.19.236.0/24 -j DROP
-A INPUT -s 162.19.238.0/24 -j DROP
-A INPUT -s 51.75.90.0/24 -j DROP
-A INPUT -s 51.75.92.0/24 -j DROP
-A INPUT -s 45.61.60.0/24 -j DROP
-A INPUT -s 162.19.239.0/24 -j DROP
-A INPUT -s 162.19.237.0/24 -j DROP
-A INPUT -s 51.75.88.0/24 -j DROP
-A INPUT -s 51.75.89.0/24 -j DROP
-A INPUT -s 85.204.70.0/24 -j DROP
-A INPUT -s 135.125.247.0/24 -j DROP
-A INPUT -s 118.26.37.0/24 -j DROP
-A INPUT -s 40.118.173.0/24 -j DROP
-A INPUT -s 34.72.176.0/24 -j DROP
-A INPUT -s 13.200.242.0/24 -j DROP
-A INPUT -s 73.195.204.0/24 -j DROP
-A INPUT -s 73.240.221.0/24 -j DROP
-A INPUT -s 123.58.210.0/24 -j DROP
-A INPUT -s 51.68.167.0/24 -j DROP
-A INPUT -s 118.26.36.0/24 -j DROP
-A INPUT -s 103.163.220.0/24 -j DROP
-A INPUT -s 103.186.215.0/24 -j DROP
-A INPUT -s 141.95.101.0/24 -j DROP
-A INPUT -s 20.185.79.0/24 -j DROP
-A INPUT -s 51.68.167.0/24 -j DROP
-A INPUT -s 45.148.10.0/24 -j DROP
-A INPUT -s 34.90.137.0/24 -j DROP
-A INPUT -s 20.171.206.0/24 -j DROP
-A INPUT -s 159.203.140.0/24 -j DROP
-A INPUT -s 34.91.173.0/24 -j DROP
-A INPUT -s 35.204.74.0/24 -j DROP
-A INPUT -s 213.255.196.0/24 -j DROP
-A INPUT -s 34.91.34.0/24 -j DROP
-A INPUT -s 34.147.86.0/24 -j DROP
-A INPUT -s 34.32.176.0/24 -j DROP
-A INPUT -s 157.245.208.0/24 -j DROP
-A INPUT -s 34.141.137.0/24 -j DROP
-A INPUT -s 34.147.5.0/24 -j DROP
-A INPUT -s 34.47.67.0/24 -j DROP
-A INPUT -s 175.20.18.0/24 -j DROP
-A INPUT -s 175.20.19.0/24 -j DROP
-A INPUT -s 183.225.123.0/24 -j DROP
-A INPUT -s 122.137.36.0/24 -j DROP
-A INPUT -s 141.98.81.0/24 -j DROP
-A INPUT -s 77.111.247.0/24 -j DROP
-A INPUT -s 157.245.110.0/24 -j DROP
-A INPUT -s 103.242.106.0/24 -j DROP
-A INPUT -s 139.211.26.0/24 -j DROP
-A INPUT -s 188.162.65.0/24 -j DROP
-A INPUT -s 51.159.102.0/24 -j DROP
-A INPUT -s 84.242.180.0/24 -j DROP
-A INPUT -s 92.247.181.0/24 -j DROP
-A INPUT -s 91.215.90.0/24 -j DROP
-A INPUT -s 60.188.10.0/24 -j DROP
-A INPUT -s 175.16.56.0/24 -j DROP
-A INPUT -s 74.6.168.0/24 -j DROP
-A INPUT -s 175.16.59.0/24 -j DROP
-A INPUT -s 139.215.113.0/24 -j DROP
-A INPUT -s 66.249.93.0/24 -j DROP
-A INPUT -s 64.233.173.0/24 -j DROP
-A INPUT -s 66.102.6.0/24 -j DROP
-A INPUT -s 66.249.83.0/24 -j DROP
-A INPUT -s 47.238.13.0/24 -j DROP
-A INPUT -s 85.203.21.0/24 -j DROP
-A INPUT -s 35.188.214.0/24 -j DROP
-A INPUT -s 34.173.150.0/24 -j DROP
-A INPUT -s 34.29.180.0/24 -j DROP
-A INPUT -s 35.226.187.0/24 -j DROP
-A INPUT -s 35.238.50.0/24 -j DROP
-A INPUT -s 116.7.98.0/24 -j DROP
-A INPUT -s 143.198.32.0/24 -j DROP
-A INPUT -s 146.190.128.0/24 -j DROP
-A INPUT -s 159.223.43.0/24 -j DROP
-A INPUT -s 161.35.40.0/24 -j DROP
-A INPUT -s 165.22.196.0/24 -j DROP
-A INPUT -s 178.128.39.0/24 -j DROP
-A INPUT -s 209.242.223.0/24 -j DROP
-A INPUT -s 209.97.167.0/24 -j DROP
-A INPUT -s 34.141.162.0/24 -j DROP
-A INPUT -s 34.141.173.0/24 -j DROP
-A INPUT -s 34.147.28.0/24 -j DROP
-A INPUT -s 34.236.36.0/24 -j DROP
-A INPUT -s 34.90.117.0/24 -j DROP
-A INPUT -s 34.90.20.0/24 -j DROP
-A INPUT -s 34.90.63.0/24 -j DROP
-A INPUT -s 34.91.157.0/24 -j DROP
-A INPUT -s 34.91.245.0/24 -j DROP
-A INPUT -s 44.213.126.0/24 -j DROP
-A INPUT -s 23.249.161.0/24 -j DROP
-A INPUT -s 107.181.141.0/24 -j DROP
-A INPUT -s 20.99.210.0/24 -j DROP
-A INPUT -s 198.37.109.0/24 -j DROP
-A INPUT -s 42.104.223.0/24 -j DROP
-A INPUT -s 45.43.84.0/24 -j DROP
-A INPUT -s 168.151.107.0/24 -j DROP
-A INPUT -s 45.41.162.0/24 -j DROP
-A INPUT -s 173.252.127.0/24 -j DROP
-A INPUT -s 57.141.3.0/24 -j DROP
-A INPUT -s 103.37.180.0/24 -j DROP
-A INPUT -s 57.141.7.0/24 -j DROP
-A INPUT -s 54.178.250.0/24 -j DROP
-A INPUT -s 185.3.34.0/24 -j DROP
-A INPUT -s 168.199.209.0/24 -j DROP
-A INPUT -s 2.57.77.0/24 -j DROP
-A INPUT -s 168.151.110.0/24 -j DROP
-A INPUT -s 206.204.26.0/24 -j DROP
-A INPUT -s 44.192.13.0/24 -j DROP
-A INPUT -s 52.89.120.0/24 -j DROP
-A INPUT -s 52.212.69.0/24 -j DROP
-A INPUT -s 192.241.128.0/24 -j DROP
-A INPUT -s 100.28.131.0/24 -j DROP
-A INPUT -s 178.73.212.0/24 -j DROP
-A INPUT -s 143.110.158.0/24 -j DROP
-A INPUT -s 65.19.138.0/24 -j DROP
-A INPUT -s 3.255.109.0/24 -j DROP
-A INPUT -s 147.182.194.0/24 -j DROP
-A INPUT -s 83.229.59.0/24 -j DROP
-A INPUT -s 116.212.189.0/24 -j DROP
-A INPUT -s 34.141.214.0/24 -j DROP
-A INPUT -s 192.241.151.0/24 -j DROP
-A INPUT -s 168.151.96.0/24 -j DROP
-A INPUT -s 45.114.241.0/24 -j DROP
-A INPUT -s 35.204.48.0/24 -j DROP
-A INPUT -s 34.248.173.0/24 -j DROP
-A INPUT -s 165.227.111.0/24 -j DROP
-A INPUT -s 35.204.74.0/24 -j DROP
-A INPUT -s 134.209.88.0/24 -j DROP
-A INPUT -s 173.252.69.0/24 -j DROP
-A INPUT -s 34.172.79.0/24 -j DROP
-A INPUT -s 203.166.157.0/24 -j DROP
-A INPUT -s 168.151.133.0/24 -j DROP
-A INPUT -s 52.35.141.0/24 -j DROP
-A INPUT -s 35.84.123.0/24 -j DROP
-A INPUT -s 143.198.72.0/24 -j DROP
-A INPUT -s 173.252.70.0/24 -j DROP
-A INPUT -s 3.239.118.0/24 -j DROP
-A INPUT -s 3.210.200.0/24 -j DROP
-A INPUT -s 178.62.248.0/24 -j DROP
-A INPUT -s 128.199.16.0/24 -j DROP
-A INPUT -s 46.246.64.0/24 -j DROP
-A INPUT -s 27.55.94.0/24 -j DROP
-A INPUT -s 85.217.191.0/24 -j DROP
-A INPUT -s 78.138.63.0/24 -j DROP
-A INPUT -s 167.172.41.0/24 -j DROP
-A INPUT -s 34.90.115.0/24 -j DROP
-A INPUT -s 35.204.98.0/24 -j DROP
-A INPUT -s 66.56.81.0/24 -j DROP
-A INPUT -s 180.149.6.0/24 -j DROP
-A INPUT -s 54.72.117.0/24 -j DROP
-A INPUT -s 173.252.87.0/24 -j DROP
-A INPUT -s 66.220.149.0/24 -j DROP
-A INPUT -s 159.65.95.0/24 -j DROP
-A INPUT -s 35.234.166.0/24 -j DROP
-A INPUT -s 34.91.187.0/24 -j DROP
-A INPUT -s 34.123.167.0/24 -j DROP
-A INPUT -s 34.141.144.0/24 -j DROP
-A INPUT -s 34.45.115.0/24 -j DROP
-A INPUT -s 34.90.185.0/24 -j DROP
-A INPUT -s 34.90.102.0/24 -j DROP
-A INPUT -s 34.91.51.0/24 -j DROP
-A INPUT -s 35.234.160.0/24 -j DROP
-A INPUT -s 46.101.137.0/24 -j DROP
-A INPUT -s 104.154.38.0/24 -j DROP
-A INPUT -s 34.172.78.0/24 -j DROP
-A INPUT -s 34.147.96.0/24 -j DROP
-A INPUT -s 188.166.250.0/24 -j DROP
-A INPUT -s 64.227.183.0/24 -j DROP
-A INPUT -s 34.227.143.0/24 -j DROP
-A INPUT -s 167.99.139.0/24 -j DROP
-A INPUT -s 95.217.35.0/24 -j DROP
-A INPUT -s 35.247.248.0/24 -j DROP
-A INPUT -s 8.29.198.0/24 -j DROP
-A INPUT -s 146.190.102.0/24 -j DROP
-A INPUT -s 23.82.41.0/24 -j DROP
-A INPUT -s 103.37.183.0/24 -j DROP
-A INPUT -s 195.158.211.0/24 -j DROP
-A INPUT -s 104.143.224.0/24 -j DROP
-A INPUT -s 91.240.209.0/24 -j DROP
-A INPUT -s 94.25.229.0/24 -j DROP
-A INPUT -s 104.239.44.0/24 -j DROP
-A INPUT -s 80.246.94.0/24 -j DROP
-A INPUT -s 217.194.152.0/24 -j DROP
-A INPUT -s 168.199.227.0/24 -j DROP
-A INPUT -s 188.170.192.0/24 -j DROP
-A INPUT -s 5.183.39.0/24 -j DROP
-A INPUT -s 142.93.1.0/24 -j DROP
-A INPUT -s 194.61.113.0/24 -j DROP
-A INPUT -s 167.99.190.0/24 -j DROP
-A INPUT -s 5.182.126.0/24 -j DROP
-A INPUT -s 212.29.221.0/24 -j DROP
-A INPUT -s 92.240.206.0/24 -j DROP
-A INPUT -s 68.183.88.0/24 -j DROP
-A INPUT -s 185.202.29.0/24 -j DROP
-A INPUT -s 45.147.69.0/24 -j DROP
-A INPUT -s 134.209.204.0/24 -j DROP
-A INPUT -s 195.66.216.0/24 -j DROP
-A INPUT -s 168.151.199.0/24 -j DROP
-A INPUT -s 164.92.71.0/24 -j DROP
-A INPUT -s 93.115.4.0/24 -j DROP
-A INPUT -s 185.5.145.0/24 -j DROP
-A INPUT -s 83.229.30.0/24 -j DROP
-A INPUT -s 207.230.120.0/24 -j DROP
-A INPUT -s 199.203.99.0/24 -j DROP
-A INPUT -s 143.244.140.0/24 -j DROP
-A INPUT -s 188.241.146.0/24 -j DROP
-A INPUT -s 212.235.15.0/24 -j DROP
-A INPUT -s 137.184.23.0/24 -j DROP
-A INPUT -s 165.22.116.0/24 -j DROP
-A INPUT -s 161.123.78.0/24 -j DROP
-A INPUT -s 57.141.5.0/24 -j DROP
-A INPUT -s 45.80.119.0/24 -j DROP
-A INPUT -s 34.32.246.0/24 -j DROP
-A INPUT -s 83.229.92.0/24 -j DROP
-A INPUT -s 180.32.70.0/24 -j DROP
-A INPUT -s 77.75.77.0/24 -j DROP
-A INPUT -s 37.214.25.0/24 -j DROP
-A INPUT -s 5.157.13.0/24 -j DROP
-A INPUT -s 54.163.39.0/24 -j DROP
-A INPUT -s 34.147.119.0/24 -j DROP
-A INPUT -s 35.204.202.0/24 -j DROP
-A INPUT -s 34.46.78.0/24 -j DROP
-A INPUT -s 34.141.130.0/24 -j DROP
-A INPUT -s 23.92.21.0/24 -j DROP
-A INPUT -s 34.147.93.0/24 -j DROP
-A INPUT -s 95.216.97.0/24 -j DROP
-A INPUT -s 34.106.92.0/24 -j DROP
-A INPUT -s 34.166.32.0/24 -j DROP
-A INPUT -s 104.154.152.0/24 -j DROP
-A INPUT -s 34.173.178.0/24 -j DROP
-A INPUT -s 104.211.58.0/24 -j DROP
-A INPUT -s 34.171.176.0/24 -j DROP
-A INPUT -s 35.204.130.0/24 -j DROP
-A INPUT -s 34.170.97.0/24 -j DROP
-A INPUT -s 34.46.169.0/24 -j DROP
-A INPUT -s 34.90.121.0/24 -j DROP
-A INPUT -s 34.91.70.0/24 -j DROP
-A INPUT -s 34.147.70.0/24 -j DROP
-A INPUT -s 49.98.253.0/24 -j DROP
-A INPUT -s 5.62.152.0/24 -j DROP
-A INPUT -s 95.216.43.0/24 -j DROP
-A INPUT -s 34.89.233.0/24 -j DROP
-A INPUT -s 34.172.220.0/24 -j DROP
-A INPUT -s 34.124.202.0/24 -j DROP
-A INPUT -s 37.214.26.0/24 -j DROP
-A INPUT -s 35.204.206.0/24 -j DROP
-A INPUT -s 34.147.110.0/24 -j DROP
-A INPUT -s 34.91.21.0/24 -j DROP
-A INPUT -s 34.147.1.0/24 -j DROP
-A INPUT -s 206.41.187.0/24 -j DROP
-A INPUT -s 34.91.203.0/24 -j DROP
-A INPUT -s 95.85.14.0/24 -j DROP
-A INPUT -s 34.219.195.0/24 -j DROP
-A INPUT -s 175.22.92.0/24 -j DROP
-A INPUT -s 104.248.14.0/24 -j DROP
-A INPUT -s 95.216.226.0/24 -j DROP
-A INPUT -s 98.80.136.0/24 -j DROP
-A INPUT -s 168.151.101.0/24 -j DROP
-A INPUT -s 44.200.63.0/24 -j DROP
-A INPUT -s 54.172.160.0/24 -j DROP
-A INPUT -s 188.166.96.0/24 -j DROP
-A INPUT -s 213.255.199.0/24 -j DROP
-A INPUT -s 77.75.76.0/24 -j DROP
-A INPUT -s 139.59.62.0/24 -j DROP
-A INPUT -s 139.59.85.0/24 -j DROP
-A INPUT -s 138.197.20.0/24 -j DROP
-A INPUT -s 134.122.34.0/24 -j DROP
-A INPUT -s 139.59.41.0/24 -j DROP
-A INPUT -s 54.237.199.0/24 -j DROP
-A INPUT -s 35.192.33.0/24 -j DROP
-A INPUT -s 34.27.109.0/24 -j DROP
-A INPUT -s 139.59.70.0/24 -j DROP
-A INPUT -s 168.151.98.0/24 -j DROP
-A INPUT -s 100.25.103.0/24 -j DROP
-A INPUT -s 3.86.154.0/24 -j DROP
-A INPUT -s 34.90.44.0/24 -j DROP
-A INPUT -s 161.35.96.0/24 -j DROP
-A INPUT -s 95.216.46.0/24 -j DROP
-A INPUT -s 209.38.34.0/24 -j DROP
-A INPUT -s 34.170.29.0/24 -j DROP
-A INPUT -s 104.248.169.0/24 -j DROP
-A INPUT -s 138.197.144.0/24 -j DROP
-A INPUT -s 20.27.20.0/24 -j DROP
-A INPUT -s 207.154.194.0/24 -j DROP
-A INPUT -s 100.28.126.0/24 -j DROP
-A INPUT -s 159.203.75.0/24 -j DROP
-A INPUT -s 18.234.195.0/24 -j DROP
-A INPUT -s 143.198.210.0/24 -j DROP
-A INPUT -s 193.200.104.0/24 -j DROP
-A INPUT -s 162.43.231.0/24 -j DROP
-A INPUT -s 34.32.231.0/24 -j DROP
-A INPUT -s 35.204.156.0/24 -j DROP
-A INPUT -s 35.204.87.0/24 -j DROP
-A INPUT -s 34.90.119.0/24 -j DROP
-A INPUT -s 34.90.231.0/24 -j DROP
-A INPUT -s 206.189.30.0/24 -j DROP
-A INPUT -s 35.202.69.0/24 -j DROP
-A INPUT -s 34.32.136.0/24 -j DROP
-A INPUT -s 34.141.207.0/24 -j DROP
-A INPUT -s 35.204.92.0/24 -j DROP
-A INPUT -s 104.197.35.0/24 -j DROP
-A INPUT -s 34.90.108.0/24 -j DROP
-A INPUT -s 34.91.105.0/24 -j DROP
-A INPUT -s 64.23.196.0/24 -j DROP
-A INPUT -s 34.27.90.0/24 -j DROP
-A INPUT -s 34.147.99.0/24 -j DROP
-A INPUT -s 34.147.63.0/24 -j DROP
-A INPUT -s 34.141.212.0/24 -j DROP
-A INPUT -s 34.32.217.0/24 -j DROP
-A INPUT -s 35.204.120.0/24 -j DROP
-A INPUT -s 34.91.192.0/24 -j DROP
-A INPUT -s 35.204.236.0/24 -j DROP
-A INPUT -s 34.141.216.0/24 -j DROP
-A INPUT -s 51.75.170.0/24 -j DROP
-A INPUT -s 218.27.170.0/24 -j DROP
-A INPUT -s 58.253.240.0/24 -j DROP
-A INPUT -s 119.49.143.0/24 -j DROP
-A INPUT -s 125.32.209.0/24 -j DROP
-A INPUT -s 168.235.205.0/24 -j DROP
-A INPUT -s 119.12.182.0/24 -j DROP
-A INPUT -s 34.147.74.0/24 -j DROP
-A INPUT -s 34.90.59.0/24 -j DROP
-A INPUT -s 34.90.250.0/24 -j DROP
-A INPUT -s 34.32.128.0/24 -j DROP
-A INPUT -s 34.32.146.0/24 -j DROP
-A INPUT -s 34.91.209.0/24 -j DROP
-A INPUT -s 34.91.215.0/24 -j DROP
-A INPUT -s 34.91.62.0/24 -j DROP
-A INPUT -s 175.22.87.0/24 -j DROP
-A INPUT -s 175.20.194.0/24 -j DROP
-A INPUT -s 3.71.73.0/24 -j DROP
-A INPUT -s 124.120.250.0/24 -j DROP
-A INPUT -s 124.120.252.0/24 -j DROP
-A INPUT -s 34.90.122.0/24 -j DROP
-A INPUT -s 34.32.253.0/24 -j DROP
-A INPUT -s 34.90.140.0/24 -j DROP
-A INPUT -s 34.91.213.0/24 -j DROP
-A INPUT -s 34.91.52.0/24 -j DROP
-A INPUT -s 34.91.87.0/24 -j DROP
-A INPUT -s 34.91.184.0/24 -j DROP
-A INPUT -s 34.91.228.0/24 -j DROP
-A INPUT -s 34.147.30.0/24 -j DROP
-A INPUT -s 35.204.173.0/24 -j DROP
-A INPUT -s 34.141.147.0/24 -j DROP
-A INPUT -s 34.91.200.0/24 -j DROP
-A INPUT -s 34.198.236.0/24 -j DROP
-A INPUT -s 123.58.215.0/24 -j DROP
-A INPUT -s 52.50.213.0/24 -j DROP
-A INPUT -s 123.6.49.0/24 -j DROP
-A INPUT -s 27.115.124.0/24 -j DROP
-A INPUT -s 175.22.86.0/24 -j DROP
-A INPUT -s 154.213.184.0/24 -j DROP
-A INPUT -s 185.119.1.0/24 -j DROP
-A INPUT -s 195.3.223.0/24 -j DROP
-A INPUT -s 20.172.38.0/24 -j DROP
-A INPUT -s 139.59.244.0/24 -j DROP
-A INPUT -s 36.255.220.0/24 -j DROP
-A INPUT -s 103.218.240.0/24 -j DROP
-A INPUT -s 45.135.232.0/24 -j DROP
-A INPUT -s 47.76.209.0/24 -j DROP
-A INPUT -s 47.76.99.0/24 -j DROP
-A INPUT -s 79.137.195.0/24 -j DROP
-A INPUT -s 148.113.142.0/24 -j DROP
-A INPUT -s 199.195.253.0/24 -j DROP
-A INPUT -s 148.113.142.0/24 -j DROP
-A INPUT -s 119.49.236.0/24 -j DROP
-A INPUT -s 198.211.107.0/24 -j DROP
-A INPUT -s 154.38.177.0/24 -j DROP
-A INPUT -s 188.95.65.0/24 -j DROP
-A INPUT -s 178.128.89.0/24 -j DROP
-A INPUT -s 183.182.116.0/24 -j DROP
-A INPUT -s 40.76.162.0/24 -j DROP
-A INPUT -s 159.138.109.0/24 -j DROP
-A INPUT -s 159.138.111.0/24 -j DROP
-A INPUT -s 175.20.16.0/24 -j DROP
-A INPUT -s 172.203.190.0/24 -j DROP
-A INPUT -s 124.243.189.0/24 -j DROP
-A INPUT -s 138.197.45.0/24 -j DROP
-A INPUT -s 175.22.147.0/24 -j DROP
-A INPUT -s 218.27.169.0/24 -j DROP
-A INPUT -s 109.120.137.0/24 -j DROP
-A INPUT -s 194.50.16.0/24 -j DROP
-A INPUT -s 13.79.186.0/24 -j DROP
-A INPUT -s 157.230.35.0/24 -j DROP
-A INPUT -s 87.120.113.0/24 -j DROP
-A INPUT -s 13.79.156.0/24 -j DROP
-A INPUT -s 54.37.204.0/24 -j DROP
-A INPUT -s 78.153.140.0/24 -j DROP
-A INPUT -s 52.47.157.0/24 -j DROP
-A INPUT -s 103.149.27.0/24 -j DROP
-A INPUT -s 143.198.199.0/24 -j DROP
-A INPUT -s 213.186.1.0/24 -j DROP
-A INPUT -s 37.140.223.0/24 -j DROP
-A INPUT -s 13.37.220.0/24 -j DROP
-A INPUT -s 128.199.118.0/24 -j DROP
-A INPUT -s 141.94.221.0/24 -j DROP
-A INPUT -s 185.119.3.0/24 -j DROP
-A INPUT -s 185.102.11.0/24 -j DROP
-A INPUT -s 13.79.152.0/24 -j DROP
-A INPUT -s 64.227.32.0/24 -j DROP
-A INPUT -s 159.223.93.0/24 -j DROP
-A INPUT -s 178.211.139.0/24 -j DROP
-A INPUT -s 152.42.188.0/24 -j DROP
-A INPUT -s 54.190.13.0/24 -j DROP
-A INPUT -s 194.5.82.0/24 -j DROP
-A INPUT -s 185.119.3.0/24 -j DROP
-A INPUT -s 98.80.4.0/24 -j DROP
-A INPUT -s 104.28.156.0/24 -j DROP
-A INPUT -s 13.201.66.0/24 -j DROP
-A INPUT -s 195.42.234.0/24 -j DROP
-A INPUT -s 3.140.208.0/24 -j DROP
-A INPUT -s 20.191.255.0/24 -j DROP
-A INPUT -s 52.237.233.0/24 -j DROP
-A INPUT -s 188.166.181.0/24 -j DROP
-A INPUT -s 52.237.239.0/24 -j DROP
-A INPUT -s 20.191.251.0/24 -j DROP
-A INPUT -s 18.217.238.0/24 -j DROP
-A INPUT -s 52.237.237.0/24 -j DROP
-A INPUT -s 40.76.173.0/24 -j DROP
-A INPUT -s 51.15.184.0/24 -j DROP
-A INPUT -s 3.15.156.0/24 -j DROP
-A INPUT -s 129.226.35.0/24 -j DROP
-A INPUT -s 104.28.156.0/24 -j DROP
-A INPUT -s 13.79.220.0/24 -j DROP
-A INPUT -s 52.142.24.0/24 -j DROP
-A INPUT -s 52.58.150.0/24 -j DROP
-A INPUT -s 35.158.160.0/24 -j DROP
-A INPUT -s 181.214.107.0/24 -j DROP
-A INPUT -s 154.222.7.0/24 -j DROP
-A INPUT -s 115.84.117.0/24 -j DROP
-A INPUT -s 54.177.206.0/24 -j DROP
-A INPUT -s 35.161.55.0/24 -j DROP
-A INPUT -s 18.191.199.0/24 -j DROP
-A INPUT -s 3.17.153.0/24 -j DROP
-A INPUT -s 73.134.125.0/24 -j DROP
-A INPUT -s 37.27.51.0/24 -j DROP
-A INPUT -s 45.132.227.0/24 -j DROP
-A INPUT -s 87.120.127.0/24 -j DROP
-A INPUT -s 154.222.4.0/24 -j DROP
-A INPUT -s 143.198.89.0/24 -j DROP
-A INPUT -s 95.214.53.0/24 -j DROP
-A INPUT -s 136.144.42.0/24 -j DROP
-A INPUT -s 152.42.177.0/24 -j DROP
-A INPUT -s 115.84.71.0/24 -j DROP
-A INPUT -s 18.216.99.0/24 -j DROP
-A INPUT -s 44.222.129.0/24 -j DROP
-A INPUT -s 104.248.251.0/24 -j DROP
-A INPUT -s 147.182.246.0/24 -j DROP
-A INPUT -s 34.90.103.0/24 -j DROP
-A INPUT -s 152.42.204.0/24 -j DROP
-A INPUT -s 209.38.208.0/24 -j DROP
-A INPUT -s 34.132.231.0/24 -j DROP
-A INPUT -s 35.245.189.0/24 -j DROP
-A INPUT -s 134.209.40.0/24 -j DROP
-A INPUT -s 54.163.232.0/24 -j DROP
-A INPUT -s 5.161.118.0/24 -j DROP
-A INPUT -s 34.121.220.0/24 -j DROP
-A INPUT -s 34.91.60.0/24 -j DROP
-A INPUT -s 34.91.45.0/24 -j DROP
-A INPUT -s 52.23.181.0/24 -j DROP
-A INPUT -s 34.91.250.0/24 -j DROP
-A INPUT -s 143.110.210.0/24 -j DROP
-A INPUT -s 34.141.208.0/24 -j DROP
-A INPUT -s 34.70.197.0/24 -j DROP
-A INPUT -s 34.90.128.0/24 -j DROP
-A INPUT -s 34.150.217.0/24 -j DROP
-A INPUT -s 34.90.153.0/24 -j DROP
-A INPUT -s 34.90.253.0/24 -j DROP
-A INPUT -s 137.184.161.0/24 -j DROP
-A INPUT -s 34.147.49.0/24 -j DROP
-A INPUT -s 34.91.75.0/24 -j DROP
-A INPUT -s 34.141.193.0/24 -j DROP
-A INPUT -s 35.184.11.0/24 -j DROP
-A INPUT -s 35.204.20.0/24 -j DROP
-A INPUT -s 34.55.216.0/24 -j DROP
-A INPUT -s 35.236.210.0/24 -j DROP
-A INPUT -s 176.111.172.0/24 -j DROP
-A INPUT -s 119.12.183.0/24 -j DROP
-A INPUT -s 161.35.109.0/24 -j DROP
-A INPUT -s 34.91.177.0/24 -j DROP
-A INPUT -s 20.240.13.0/24 -j DROP
-A INPUT -s 165.227.41.0/24 -j DROP
-A INPUT -s 34.141.201.0/24 -j DROP
-A INPUT -s 34.147.9.0/24 -j DROP
-A INPUT -s 54.226.203.0/24 -j DROP
-A INPUT -s 100.26.160.0/24 -j DROP
-A INPUT -s 35.204.10.0/24 -j DROP
-A INPUT -s 34.86.168.0/24 -j DROP
-A INPUT -s 35.204.192.0/24 -j DROP
-A INPUT -s 20.242.61.0/24 -j DROP
-A INPUT -s 62.146.233.0/24 -j DROP
-A INPUT -s 3.139.63.0/24 -j DROP
-A INPUT -s 18.220.146.0/24 -j DROP
-A INPUT -s 18.220.187.0/24 -j DROP
-A INPUT -s 18.116.231.0/24 -j DROP
-A INPUT -s 13.59.118.0/24 -j DROP
-A INPUT -s 3.17.67.0/24 -j DROP
-A INPUT -s 202.144.184.0/24 -j DROP
-A INPUT -s 3.23.61.0/24 -j DROP
-A INPUT -s 104.28.246.0/24 -j DROP
-A INPUT -s 115.84.70.0/24 -j DROP
-A INPUT -s 194.233.94.0/24 -j DROP
-A INPUT -s 194.233.64.0/24 -j DROP
-A INPUT -s 216.10.217.0/24 -j DROP
-A INPUT -s 193.36.118.0/24 -j DROP
-A INPUT -s 4.227.36.0/24 -j DROP
-A INPUT -s 18.188.159.0/24 -j DROP
-A INPUT -s 47.76.220.0/24 -j DROP
-A INPUT -s 47.76.222.0/24 -j DROP
-A INPUT -s 185.178.164.0/24 -j DROP
-A INPUT -s 3.17.68.0/24 -j DROP
-A INPUT -s 3.70.226.0/24 -j DROP
-A INPUT -s 172.233.79.0/24 -j DROP
-A INPUT -s 3.15.207.0/24 -j DROP
-A INPUT -s 18.217.193.0/24 -j DROP
-A INPUT -s 123.160.223.0/24 -j DROP
-A INPUT -s 154.203.197.0/24 -j DROP
-A INPUT -s 3.77.38.0/24 -j DROP
-A INPUT -s 18.140.59.0/24 -j DROP
-A INPUT -s 13.213.72.0/24 -j DROP
-A INPUT -s 179.43.189.0/24 -j DROP
-A INPUT -s 183.182.111.0/24 -j DROP
-A INPUT -s 176.123.7.0/24 -j DROP
-A INPUT -s 3.138.141.0/24 -j DROP
-A INPUT -s 13.213.64.0/24 -j DROP
-A INPUT -s 3.138.141.0/24 -j DROP
-A INPUT -s 18.140.2.0/24 -j DROP
-A INPUT -s 3.14.150.0/24 -j DROP
-A INPUT -s 103.72.147.0/24 -j DROP
-A INPUT -s 194.127.199.0/24 -j DROP
-A INPUT -s 136.144.43.0/24 -j DROP
-A INPUT -s 3.76.188.0/24 -j DROP
-A INPUT -s 104.28.214.0/24 -j DROP
-A INPUT -s 95.29.225.0/24 -j DROP
-A INPUT -s 95.29.246.0/24 -j DROP
-A INPUT -s 183.238.246.0/24 -j DROP
-A INPUT -s 14.155.228.0/24 -j DROP
-A INPUT -s 183.239.175.0/24 -j DROP
-A INPUT -s 3.9.16.0/24 -j DROP
-A INPUT -s 103.67.200.0/24 -j DROP
-A INPUT -s 172.172.130.0/24 -j DROP
-A INPUT -s 87.120.114.0/24 -j DROP
-A INPUT -s 43.230.201.0/24 -j DROP
-A INPUT -s 202.144.185.0/24 -j DROP
-A INPUT -s 123.58.209.0/24 -j DROP
-A INPUT -s 135.125.218.0/24 -j DROP
-A INPUT -s 141.95.107.0/24 -j DROP
-A INPUT -s 110.52.28.0/24 -j DROP
-A INPUT -s 54.36.113.0/24 -j DROP
-A INPUT -s 54.36.119.0/24 -j DROP
-A INPUT -s 95.29.228.0/24 -j DROP
-A INPUT -s 79.173.88.0/24 -j DROP
-A INPUT -s 79.173.92.0/24 -j DROP
-A INPUT -s 95.29.239.0/24 -j DROP
-A INPUT -s 193.41.206.0/24 -j DROP
-A INPUT -s 154.222.6.0/24 -j DROP
-A INPUT -s 114.137.175.0/24 -j DROP
-A INPUT -s 213.136.70.0/24 -j DROP
-A INPUT -s 13.213.54.0/24 -j DROP
-A INPUT -s 99.255.100.0/24 -j DROP
-A INPUT -s 164.152.20.0/24 -j DROP
-A INPUT -s 52.13.108.0/24 -j DROP
-A INPUT -s 93.159.231.0/24 -j DROP
-A INPUT -s 128.1.131.0/24 -j DROP
-A INPUT -s 141.95.104.0/24 -j DROP
-A INPUT -s 141.95.106.0/24 -j DROP
-A INPUT -s 18.138.253.0/24 -j DROP
-A INPUT -s 18.136.194.0/24 -j DROP
-A INPUT -s 18.141.147.0/24 -j DROP
-A INPUT -s 85.31.47.0/24 -j DROP
-A INPUT -s 108.60.213.0/24 -j DROP
-A INPUT -s 147.182.222.0/24 -j DROP
-A INPUT -s 143.198.211.0/24 -j DROP
-A INPUT -s 193.36.225.0/24 -j DROP
-A INPUT -s 92.119.36.0/24 -j DROP
-A INPUT -s 94.156.177.0/24 -j DROP
-A INPUT -s 116.68.162.0/24 -j DROP
-A INPUT -s 188.213.202.0/24 -j DROP
-A INPUT -s 23.102.30.0/24 -j DROP
-A INPUT -s 23.102.25.0/24 -j DROP
-A INPUT -s 18.143.90.0/24 -j DROP
-A INPUT -s 23.102.29.0/24 -j DROP
-A INPUT -s 159.203.77.0/24 -j DROP
-A INPUT -s 216.81.248.0/24 -j DROP
-A INPUT -s 47.82.11.0/24 -j DROP
-A INPUT -s 47.82.10.0/24 -j DROP
-A INPUT -s 129.213.94.0/24 -j DROP
-A INPUT -s 134.122.30.0/24 -j DROP
-A INPUT -s 204.76.203.0/24 -j DROP
-A INPUT -s 161.35.246.0/24 -j DROP
-A INPUT -s 206.189.247.0/24 -j DROP
-A INPUT -s 106.43.32.0/24 -j DROP
-A INPUT -s 194.42.197.0/24 -j DROP
-A INPUT -s 45.201.215.0/24 -j DROP
-A INPUT -s 13.232.198.0/24 -j DROP
-A INPUT -s 118.26.38.0/24 -j DROP
-A INPUT -s 47.82.9.0/24 -j DROP
-A INPUT -s 104.28.218.0/24 -j DROP
-A INPUT -s 202.137.156.0/24 -j DROP
-A INPUT -s 47.82.8.0/24 -j DROP
-A INPUT -s 90.187.238.0/24 -j DROP
-A INPUT -s 198.244.141.0/24 -j DROP
-A INPUT -s 198.244.143.0/24 -j DROP
-A INPUT -s 198.244.142.0/24 -j DROP
-A INPUT -s 51.195.232.0/24 -j DROP
-A INPUT -s 141.94.2.0/24 -j DROP
-A INPUT -s 101.255.122.0/24 -j DROP
-A INPUT -s 167.71.200.0/24 -j DROP
-A INPUT -s 139.5.157.0/24 -j DROP
-A INPUT -s 150.136.69.0/24 -j DROP
-A INPUT -s 40.76.163.0/24 -j DROP
-A INPUT -s 170.39.218.0/24 -j DROP
-A INPUT -s 195.178.110.0/24 -j DROP
-A INPUT -s 37.27.55.0/24 -j DROP
-A INPUT -s 173.239.254.0/24 -j DROP
-A INPUT -s 52.42.250.0/24 -j DROP
-A INPUT -s 95.29.229.0/24 -j DROP
-A INPUT -s 18.171.145.0/24 -j DROP
-A INPUT -s 150.136.112.0/24 -j DROP
-A INPUT -s 217.182.104.0/24 -j DROP
-A INPUT -s 141.94.156.0/24 -j DROP
-A INPUT -s 176.123.8.0/24 -j DROP
-A INPUT -s 13.94.94.0/24 -j DROP
-A INPUT -s 13.74.58.0/24 -j DROP
-A INPUT -s 103.73.160.0/24 -j DROP
-A INPUT -s 95.29.237.0/24 -j DROP
-A INPUT -s 95.29.238.0/24 -j DROP
-A INPUT -s 95.29.243.0/24 -j DROP
-A INPUT -s 95.29.227.0/24 -j DROP
-A INPUT -s 149.130.215.0/24 -j DROP
-A INPUT -s 156.59.198.0/24 -j DROP
-A INPUT -s 13.74.118.0/24 -j DROP
-A INPUT -s 45.8.25.0/24 -j DROP
-A INPUT -s 173.236.200.0/24 -j DROP
-A INPUT -s 13.250.118.0/24 -j DROP
-A INPUT -s 13.250.63.0/24 -j DROP
-A INPUT -s 13.212.141.0/24 -j DROP
-A INPUT -s 54.226.250.0/24 -j DROP
-A INPUT -s 213.232.87.0/24 -j DROP
-A INPUT -s 13.201.104.0/24 -j DROP
-A INPUT -s 15.206.90.0/24 -j DROP
-A INPUT -s 13.232.5.0/24 -j DROP
-A INPUT -s 89.187.178.0/24 -j DROP
-A INPUT -s 74.80.182.0/24 -j DROP
-A INPUT -s 47.82.0.0/24 -j DROP
-A INPUT -s 74.48.0.0/24 -j DROP
-A INPUT -s 144.48.39.0/24 -j DROP
-A INPUT -s 176.123.10.0/24 -j DROP
-A INPUT -s 104.156.140.0/24 -j DROP
COMMIT
